# CraftSplat-20

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: capture_guide_zh.md  feasibility.md  pipeline.md  troubleshooting.md
examples/handmade-ceramic/: README.md
examples/touch-gallery/: README.md
scripts/: run_pipeline.py
src/craftsplat/: __init__.py  cli.py
src/craftsplat/commands/: __init__.py  capture_plan.py  colmap_cmd.py  export_cmd.py  prepare.py  report.py  train_cmd.py
tests/: __init__.py  test_capture_plan.py  test_cli.py  test_prepare.py
web-viewer/: index.html
